# rust_file_

./: .gitignore  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/: .gitignore
example/: README.md  pubspec.yaml  rust_file_example.dart
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rust_file_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: rust_file.podspec
lib/: rust_file.dart  rust_file_bindings_generated.dart
linux/: CMakeLists.txt
macos/: rust_file.podspec
macos/Classes/: rust_file.c
rust/: .gitignore  Cargo.toml
src/: CMakeLists.txt  rust_file.c
test/: rust_file_test.dart
windows/: CMakeLists.txt
